--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,9 +17,7 @@ maintainers = [
 requires-python = ">=3.12"
 
 
-dependencies = [
-    "pcpp>=1.30",
-]
+dependencies = []
 
 [dependency-groups]
 dev = [
