--- a/pixi.toml
+++ b/pixi.toml
@@ -2,12 +2,12 @@
 authors = ["Roy Wright <roy@wright.org>"]
 channels = ["freecad/label/dev", "conda-forge"]
 description = "Manages FreeCAD varsets and aliases"
-name = "freecad.datamanager_wb"
+name = "freecad_datamanager_workbench"
 platforms = ["osx-arm64", "linux-aarch64", "linux-64", "win-64", "osx-64"]
 version = "0.1.0"
 
 [pypi-dependencies]
-freecad_datamanager_wb = { path = ".", editable = true }
+freecad_datamanager_workbench = { path = ".", editable = true }
 
 [tasks]
 test = "pytest"
